--- a/style.css
+++ b/style.css
@@ -1,3 +1,38 @@
-h1 {
-  color: red;
+.box-global {
+	display: flex;
+	background: white;
+	padding: 50px;
+	justify-content: space-between;
+	align-items: center;
+}
+
+
+body {background: white;
+	text-align: center;}
+
+h1{color: black;
+font-size: 40px;
+text-align: center; 
+font-family: 'Lobster', cursive;}
+
+h2{color: darkgrey; 
+	font-family: 'Ubuntu Condensed', sans-serif;
+}
+
+img {width: 600px;}
+.aus2 {width: 750px;}
+.box-green {background: pink;}
+
+
+.box-blue {background: blue;
+width: 100px;
+height: 100px;
+}
+.box-white {background: white;
+width: 100px;
+height: 100px;
+}
+.box-red {background: red;
+width: 100px;
+height: 100px;
 }
